<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_red_color"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context=".Authentication.RegisterActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_margin="15dp"
            android:background="@drawable/circle_bg"
            android:padding="5dp"
            android:src="@drawable/back" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="@drawable/register_curved"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:elevation="4dp"
                android:text="Create New Account"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black_text_color"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already Have a account? Signin Here"
                android:textSize="13sp"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                android:fontFamily="@font/regular"
                android:layout_gravity="center"
                android:textColor="@color/secondaryBlack"
                android:id="@+id/txtSignIn"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="35dp"
                android:elevation="0dp"
                android:focusable="false"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryBlack" />

                <EditText
                    android:id="@+id/inputUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/input_bg"
                    android:hint="e.g John doe"

                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="11dp"
                    android:textColor="@color/black_text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryBlack" />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/input_bg"
                    android:hint="e.g john@gmail.com"


                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="11dp"
                    android:textColor="@color/black_text_color"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone_number"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryBlack" />

                <EditText
                    android:id="@+id/inputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/input_bg"
                    android:hint="@string/e_g_91_832_46"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:padding="11dp"
                    android:textColor="@color/black_text_color"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryBlack" />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/input_bg"
                    android:hint="Enter Password"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="11dp"
                    android:textColor="@color/black_text_color"

                    />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/bold"
                        android:text="Sign Up"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:visibility="visible"
                        app:backgroundTint="@color/main_red_color"
                        app:cornerRadius="10dp"

                        />
                    <ProgressBar
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:indeterminateTint="@color/main_red_color"
                        android:indeterminate="true"
                        android:id="@+id/progressBar"
                        android:visibility="invisible"
                        />

                </RelativeLayout>



            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</ScrollView>